# sb_mpc

./: .gitignore  CMakeLists.txt  README.md  bb_model.cpp  bb_model.h  main.cpp  object.cpp  object.h  sb_mpc.cpp  sb_mpc.h  utilities.cpp  utilities.h
examples/: CMakeLists.txt  example2.cpp  head_on_test.cpp  mpc_test.cpp  sfml_sim.cpp
include/SB_MPC/: SB_MPC.h  agent.h  bb_model.h  object.h  sb_mpc.h  utilities.h
src/: agent.cpp  bb_model.cpp  object.cpp  sb_mpc.cpp  utilities.cpp
